# Blur

./: README.md
cpp/cpu/: CMakeLists.txt  blur.cpp
cpp/gpu/: CMakeLists.txt  ConsoleApplication.cpp  GPUinfo.cu  GPUinfo.cuh  Test.cu  Test.cuh  blur_gpu.cu  blur_gpu.cuh  calc_cpu.cu  calc_cpu.cuh  calc_gpu.cu  calc_gpu.cuh  start.cpp
image/: test.jfif
python/: blur_cpu.py  blur_gpu.py  blur_gpu_full.py
